Removed pycache files.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,16 @@
 services:
-
   frontend:
-    container_name: frontend
-    build: 
-      context: .
-      dockerfile: Dockerfile.Frontend
-    command: sh -c "yarn dev"
+    build:
+      context: ./frontend
     volumes:
       - ./frontend:/app
     ports:
       - 3000:3000
 
   backend:
-    container_name: backend
-    build: 
-      context: .
-      dockerfile: Dockerfile.Backend
+    build:
+      context: ./backend
     volumes:
       - ./backend:/app
-    command: >
-      sh -c "cd messaging && 
-             python manage.py runserver 0.0.0.0:8000"
     ports:
       - 8000:8000
