--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,9 @@ FROM python:3.12.3-alpine
 
 WORKDIR /app
 
-COPY  ./backend /app/
+COPY  . /app/
 
 RUN pip install -r requirements.txt
+
+
+CMD [ "sh", "start_backend.sh" ]
