--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,9 @@ services:
       - ./backend:/app
     ports:
       - 8000:8000
+    depends_on:
+      - redis
+
+  redis:
+    image: redis
+    container_name: redis-server
