--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-router": "^6.26.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
+    "react-use-websocket": "^4.8.1",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.1"
   }
