--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "postcss": "^8.4.42",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -30,6 +32,7 @@
     "react-toastify": "^10.0.5",
     "react-use-websocket": "^4.8.1",
     "tailwindcss": "^3.4.10",
+    "use-debounce": "^10.0.3",
     "vite": "^5.4.1"
   }
 }
