Mobile connection test.

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,9 +1,16 @@
 # use command below to generate secret key else
-# from django.core.management.utils import get_random_secret_key  
-# get_random_secret_key()
+# python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
 SECRET_KEY='django-insecure-yc2!0fhcf$62ye(adp0btc45g3e7!)oys5r0rw+e82g=#u-ny='
 
 # set to redis if runing in docker, else 127.0.0.1
-REDIS_HOST="redis"
+REDIS_HOST="<redis/127.0.0.1>"
 
 REDIS_PORT="6379"
+
+# comma separated hosts list
+# if accessed from mobile browser
+ALLOWED_HOSTS="localhost,127.0.0.1,<machine-ip>"
+
+# comma separated origins
+# http://<machine-ip>:3000 if accessed from mobile browser
+CORS_ALLOWED_ORIGINS="http://localhost:3000,http://127.0.0.1:3000,http://<machine-ip>:3000"
