Backend refactor, frontend config WIP

--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,2 +1,3 @@
-# ip can be localhost or your machine's network ip
-VITE_API_URL="http://<ip>:3000"
+# hosted ip if exposed to external network
+VITE_API_URL="http://<host_ip/localhost/127.0.0.1>:8000"
+VITE_WS_URL="ws://<host_ip/localhost/127.0.0.1>:8000"
