--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,16 +1,15 @@
 # use command below to generate secret key else
 # python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())'
-SECRET_KEY='django-insecure-yc2!0fhcf$62ye(adp0btc45g3e7!)oys5r0rw+e82g=#u-ny='
+SECRET_KEY="django-insecure-yc2!0fhcf$62ye(adp0btc45g3e7!)oys5r0rw+e82g=#u-ny="
 
-# set to redis if runing in docker, else 127.0.0.1
+# redis if on docker, 127.0.0.1 if runing locally
 REDIS_HOST="<redis/127.0.0.1>"
 
+# default redis port, dont change
 REDIS_PORT="6379"
 
-# comma separated hosts list
-# if accessed from mobile browser
-ALLOWED_HOSTS="localhost,127.0.0.1,<machine-ip>"
+# <host-ip>:3000 => required only if exposing externally
+ALLOWED_HOSTS="localhost,127.0.0.1,<host-ip>"
 
-# comma separated origins
-# http://<machine-ip>:3000 if accessed from mobile browser
-CORS_ALLOWED_ORIGINS="http://localhost:3000,http://127.0.0.1:3000,http://<machine-ip>:3000"
+# http://<host-ip>:3000 => required only if exposing externally
+CORS_ALLOWED_ORIGINS="http://localhost:3000,http://127.0.0.1:3000,http://<host-ip>:3000"
