--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,3 +1,7 @@
-# hosted ip if exposed to external network
-VITE_API_URL="http://<host_ip/localhost/127.0.0.1>:8000"
-VITE_WS_URL="ws://<host_ip/localhost/127.0.0.1>:8000"
+# URL can be http://localhost:8000 or http://17.0.0.01:8000 or http://<host_ip>:8000
+
+# api URL
+VITE_API_URL="http://<URL>:8000"
+
+# websocket url
+VITE_WS_URL="ws://<URL>:8000"
