--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - 3000:3000
     depends_on:
       - backend
+    command: sh -c "yarn && yarn dev"
 
   backend:
     build:
@@ -18,6 +19,7 @@ services:
       - 8000:8000
     depends_on:
       - redis
+    command: sh -c "cd messaging && python manage.py migrate && python manage.py runserver 0.0.0.0:8000" 
 
   redis:
     image: redis
